Use plural noun for admin endpoints
